--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -74,7 +74,12 @@
             <p></p>
         </div>
         <div class="pure-u-1-3">
-            <p></p>
+            <p>
+                <a class="pure-button" href="#" onclick="action('effect_3d');return false">3D</a>
+                <a class="pure-button" href="#" onclick="action('effect_2_1');return false">2.1</a>
+                <a class="pure-button" href="#" onclick="action('effect_4_1');return false">4.1</a>
+                <a class="pure-button" href="#" onclick="action('effect_disabled');return false">Disable</a>
+            </p>
         </div>
         <div class="pure-u-1-3">
             <p>
