--- a/server/assets/index.html
+++ b/server/assets/index.html
@@ -1,9 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Logitech Control</title>
-    <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css"
-        integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
+    <link rel="stylesheet" href="pure-min.css">
     <style>
         .button-success,
         .button-error,
@@ -34,7 +38,7 @@
             /* this is a light blue */
         }
     </style>
-    <script src="/assets/reconnecting-websocket.js"></script>
+    <script src="reconnecting-websocket.js"></script>
 </head>
 
 <body>
@@ -88,13 +92,8 @@
             </p>
         </div>
     </div>
-    <p>
-    <form onsubmit="send(document.getElementById('msg').value); return false;">
-        <input type="text" id="msg" />
-        <button type="submit">Send</button>
-    </form>
-    </p>
     <p>Received: </p>
     <p id="result"></p>
 </body>
+
 </html>
