working windows solution

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Logitech Control</title>
-    <link rel="stylesheet" href="pure-min.css">
+    <!-- pure-min.css -->
     <style>
         .button-success,
         .button-error,
